# TouchTherapy-Commerce

./: Cargo.toml  README.md
.githooks/: pre-commit
.migrations/: 00_defined_schemas.surql  00_indexs.surql  01_create_roles.surql  02_create_admin_user.surql
config/src/: lib.rs  surrealdb.rs
controller/: Cargo.toml
core/src/models/: appointment.rs  mod.rs  product.rs  service.rs  user.rs
domain/: Cargo.toml
domain/src/: error.rs
domain/src/models/: address.rs  appointment.rs  cart.rs  category.rs  equipment.rs  mod.rs  order.rs  payment.rs  product.rs  roles.rs  service.rs  supplier.rs  user.rs
dtos/: Cargo.toml
dtos/src/: lib.rs  user.rs
dtos/src/user/in/: create_client.rs  mod.rs
http/: Cargo.toml
http/src/: lib.rs  response.rs
repository/: Cargo.toml
repository/src/: lib.rs
repository/src/user/: interface.rs  user_interface.rs
security/: Cargo.toml
security/src/: token.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/cases/: mod.rs  user.rs
services/src/email/send_email/: mod.rs  service.rs
services/src/file/: mod.rs
services/src/file/local_storage/: builder.rs  service.rs
services/src/file/s3_storage/: builder.rs  service.rs
services/src/migrations/: mod.rs
services/src/migrations/surrealdb/: builder.rs  mod.rs  service.rs
web/: Cargo.toml
