[workspace]
resolver = "2"
members = ["config",
  "domain",
  "dtos",
  "repository",
  "security",
  "server",
  "services",
  "web"
]

[workspace.dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
domain = { path = "./domain" }
dtos = { path = "./dtos" }
repository = { path = "./repository" }
security = { path = "./security" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
services = { path = "./services" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

[profile]
[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
